# Year-2_Algorithms-1

./: .gitignore
Homeworks/sem16/: CMakeLists.txt  SkipList.cpp  avl_tree.cpp  avl_tree.h  main.cpp
Homeworks/sem17/: CMakeLists.txt  main.cpp
Homeworks/sem19/: CMakeLists.txt  Graph.h
Homeworks/sem24/: CMakeLists.txt  task1.cpp  task2.cpp
Homeworks/sem29/: CMakeLists.txt  main.cpp
Homeworks/sem30/: CMakeLists.txt  main.cpp
SET-1/: A.cpp  A5.cpp  CMakeLists.txt  P1.cpp  P2.cpp  P3.cpp  P4.cpp  P5.cpp  main.cpp  test_P1.cpp
SET-10/: CMakeLists.txt  P01.cpp  P02.cpp  P03.cpp  P04.cpp  P05.cpp  P06.cpp  P07.cpp  P08.cpp  P09b.cpp  P11.cpp  main.cpp
SET-2/: CMakeLists.txt  P1.cpp  P2.cpp  P3.cpp  P4.cpp  P5.cpp
SET-3/: A1i.cpp  A2i.cpp  CMakeLists.txt  P1.cpp  P2.cpp  P3.cpp  P4.cpp  P5.cpp  P6.cpp  test.cpp
SET-3/A1/: approximate_square.cpp  build_graph1.py  build_graph2.py  true_square.cpp
SET-3/A2/: MergeSort.cpp  MergeSortHybrid.cpp  test.txt  (+2 more)
SET-4/: P1.cpp  P2.cpp  P7b.cpp  test.cpp
SET-5/: CMakeLists.txt  P1.cpp  P2.cpp  P3.cpp
SET-6/: CMakeLists.txt  P1.cpp  P2.cpp  P3.cpp  P4.cpp  P5.cpp  P6b.cpp  P7b.cpp
SET-7/: CMakeLists.txt  P1.cpp  P2.cpp  P3.cpp  P4.cpp  P5.cpp  P6.cpp
SET-8/: CMakeLists.txt  P1.cpp  P2.cpp  P3.cpp  P4.cpp  P5.cpp  P6.cpp  P7.cpp  main.cpp
SET-9/: A1m.cpp  A1rq.cpp  CMakeLists.txt  P1.cpp  P2.cpp  P3.cpp  main.cpp  test.cpp
SET-9/A1/: A1q.cpp  A1r.cpp  string_sort_results.csv  string_sort_results.xlsx  test.cpp
SET_2/: P1.cpp  P2.cpp  P3.cpp  P5.cpp  P6b.cpp  main.cpp
SET_4/: CMakeLists.txt  P1.cpp  P2.cpp
(+40 files in other folders)
