cmake_minimum_required(VERSION 3.29)
project(SET_9)

set(CMAKE_CXX_STANDARD 20)

add_executable(main main.cpp)
add_executable(test test.cpp)
add_executable(A1m A1m.cpp)
add_executable(A1q A1q.cpp)
add_executable(A1r A1r.cpp)
add_executable(A1rq A1rq.cpp)
add_executable(P1 P1.cpp)
add_executable(P2 P2.cpp)
add_executable(P3 P3.cpp)

